--- a/frontend/src/Css/AddTask.css
+++ b/frontend/src/Css/AddTask.css
@@ -23,6 +23,7 @@
     width: 30px;
     border-radius: 200%;
     border : 1px solid black;
+    cursor: pointer;
 }
 
 .popup h1 {
@@ -32,9 +33,18 @@
 .popup .formdiv {
     position: absolute;
     top: 100px;
-    left: 38%;
-    width: 900px;
-    background-color: blue;
+    left: 18%;
+    height: 400px;
+    width: 800px;
+    box-shadow: 5px 10px 20px #2323238e;
+    border-radius: 30px;
+    background-color: rgb(176, 176, 201);
+}
+
+.formdiv form {
+    position: absolute;
+    top: 50px;
+    left: 30%;
 }
 
 .popup form input{
@@ -42,20 +52,29 @@
     top: 0px;
     left: 50px;
     height: 30px;
+    border-radius: 10px;
+    border : none;
+    padding: 10px;
+    margin-bottom: 20px;
 }
 
 .popup form textarea{
     position: absolute;
+    padding: 10px;
     top: 50px;
     width: 500px;
     left: -100px;
+    border: none;
+    margin-top: 20px;
+    border-radius: 20px;
 }
 
 .popup form .submit-button{
     position: absolute;
-    top: 220px;
+    top: 260px;
     width: 200px;
     height: 40px;
+    cursor: pointer;
 }
 
 
