--- a/frontend/src/Css/Login.css
+++ b/frontend/src/Css/Login.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f4f4f4;
+    background-color: rgb(176, 176, 201);
 }
 
 .form-title-container h1 {
@@ -17,7 +17,7 @@
     background: white;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.74);
     width: 350px;
 }
 
