--- a/frontend/src/Css/Signup.css
+++ b/frontend/src/Css/Signup.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f4f4f4;
+    background-color: rgb(176, 176, 201);
 }
 
 .form-title-container h1 {
@@ -17,10 +17,14 @@
     background: white;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.74);
     width: 350px;
     text-align: center;
     margin-right: 20px;
+}
+
+form {
+    padding-right: 15px;
 }
 
 .input-field {
@@ -52,11 +56,12 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: black;
+    color: white;
 }
 
 .loginbtn {
-    width: 100%;
+    width: 98%;
     padding: 10px;
     background-color: #007bff;
     border: none;
@@ -65,8 +70,14 @@ input[type="submit"]:hover {
     font-weight: bold;
     cursor: pointer;
     border-radius: 5px;
+    margin-top: 10px;
 }
 
+.loginbtn:hover {
+    background-color: black;
+    color: white;
+}
+ 
 @media (max-width: 400px) {
     .form-container {
         width: 90%;
